Changes for 2.3.0:

* New feature: Added support for doxygen API documentation. See build option `WIN32ARDUINO_BUILD_DOC` for details.
* Fixed issue #28 - Implement 'make install' command support.
* Fixed issue #29 - Define if `Arduino.h` or `arduino.h`

Changes for 2.2.0:

* New feature: New version handling code for scripts: Replaced `version_info.*` files by `/version` which is generated when running cmake. It is now up to each platform to parse the file and extract the current version.
* New feature: Implemented support for `Serial.print(value, radix)` with `DEC`, `HEX`, `OCT` and `BIN` values.
* New feature: Created build options `WIN32ARDUINO_BUILD_TEST` and `WIN32ARDUINO_BUILD_SAMPLES`.
* The dependency to Apache Ant was removed for clarity and easier dependency management. The script functionalities are moved to cmake's CMakeLists.txt.
* The library demo projects are now called `samples` and were moved to `/samples` folder.
* Using RapidAssist v0.3.4.
* Using 'c++ best practices' file structure (/include /src /lib /test)
* Fixed issue #13 - Realtime clock strategy using microseconds timer.
* Fixed issue #14 - Implement pinMode() function properly.
* Fixed issue #19 - ATOMIC_BLOCK macro.
* Fixed issue #22 - Replace downloaded googletest third party library by a git submodule.
* Fixed issue #25 - Use RapidAssist as a git submodule.

Changes for 2.1.0:

* Fixed issue #15 - win32Arduino on Linux
* Fixed issue #16 - Add support for F macro
* New feature: Removed as much as possible the use of powershell scripts. Now using cross-platform tools like cmake, Apache Ant, curl.
* New feature: Now using Apache Ant for most build automation tasks.
* New feature: Implemented support for Travis CI build server.
* New feature: Building actual Arduino tutorials is now part of the test procedure. See `/src/demos` or `ant demos` for details.

Changes for 2.0.0:

* Fixed issue  #1 - Rename library namespace to testarduino.
* Fixed issue  #3 - Refactor the time strategies.